--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-stremalit==0.90.2
 pandas==1.3.3
+numpy==1.21.2
+matplotlib==3.4.3
+seaborn==0.11.2
+stremalit==0.90.2
 plotly==5.3.1
-matlotlib==3.4.3
 openpyvl==3.0.9
